--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
    "name": "binpack",
-   "version": "0.0.15",
+   "version": "0.1.0",
    "main": "index",
    "author": {
        "name" : "Russell McClellan",
        "email": "russell.mcclellan@gmail.com",
-       "url" : "http://www.ghostfact.com"
+       "url" : "http://www.russellmcc.com"
    },
    "description": "Minimalist numeric binary packing utilities for node.js",
    "keywords": [
@@ -15,16 +15,13 @@
    ],
    "repository" : {
        "type": "git",
-       "url": "http://github.com/russellmcc/node-binpack.git" 
+       "url": "http://github.com/russellmcc/node-binpack.git"
    },
    "dependencies" : {
    },
    "devDependencies" : {
        "vows" : "*",
        "coffee-script" : "*"
-   },
-   "directories": {
-       "src": "src"
    },
    "scripts": {
        "test" : "vows tests/*"
